# fp

./: README.md
Ficha1/: CMakeLists.txt  main.c
Ficha1/Parte_1/: Ex1.c  Ex2.c  Ex3.c  Ex4_Circulo.c  Ex4_Retangulo.c  Ex4_Triangulo.c  Ex5.c
Ficha1/Parte_2/: Ex1_P2.c  Ex2_P2.c  Ex3_P2.c  Ex4_P2.c  Ex5_P2.c
Ficha1/Parte_3/: Ex1_P3.c
