cmake_minimum_required(VERSION 3.26)
project(Ficha1 C)

set(CMAKE_C_STANDARD 11)

add_executable(Ficha1 main.c
        Parte_1/Ex1.c
        Parte_1/Ex2.c
        Parte_1/Ex3.c
        Parte_1/Ex4_Retangulo.c
        Parte_1/Ex4_Circulo.c
        Parte_1/Ex4_Triangulo.c
        Parte_1/Ex5.c
        Parte_2/Ex1_P2.c
        Parte_2/Ex2_P2.c
        Parte_2/Ex3_P2.c
        Parte_2/Ex4_P2.c
        Parte_2/Ex5_P2.c
        Parte_3/Ex1_P3.c
)
